--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@trust/jose": "^0.3.0",
     "@trust/keyto": "^0.3.0",
     "@trust/webcrypto": "^0.2.1",
+    "crypto-js": "^3.1.9-1",
     "ethereumjs-testrpc": "^3.0.5",
     "ethereumjs-tx": "^1.2.5",
     "web3": "^0.15.3"
